kube/minikube/auto-scale-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-service
  template:
    metadata:
      labels:
        app: cloud-service
    spec:
      containers:
        - image: itmo-cloud-technology:latest
          name: cloud-service
          imagePullPolicy: Never
          ports:
          - containerPort: 8282
          resources:
            requests:
              cpu: "150m"
            limits:
              cpu: "200m"
