kube/minikube/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-service
  template:
    metadata:
      labels:
        app: cloud-service
    spec:
      containers:
        - image: itmo-cloud-technology:latest
          name: itmo-cloud-technology
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
